Closed Bug 329510 Opened 19 years ago Closed 19 years ago

Instance backup happens too late

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: allan, Assigned: allan)

References

()

Details

(Keywords: fixed1.8.0.4, fixed1.8.1)

Attachments

(2 files)

Right now we handle instance data backup when the model receive xforms-ready. This is wrong. The model should be ready at that time, so event listeners could f.x. dispatch xforms-reset, which will then not work.
Attached file Testcase
Attached patch PatchSplinter Review
Assignee: aaronr → allan
Status: NEW → ASSIGNED
Attachment #214194 - Flags: review?(aaronr)
Comment on attachment 214194 [details] [diff] [review] Patch good catch
Attachment #214194 - Flags: review?(aaronr) → review+
Attachment #214194 - Flags: review?(smaug)
Comment on attachment 214194 [details] [diff] [review] Patch Could you use -p with diff
Attachment #214194 - Flags: review?(smaug) → review+
Checked into trunk
Whiteboard: xf-to-branch
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Blocks: 332853
Whiteboard: xf-to-branch
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: