[XForms] Backup instances before dispatching xforms-ready. Bug 329510, r=aaronr+smaug